--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@
 __pycache__/
 /testCode/testLocalAudio/*
 !/testCode/testLocalAudio/.gitkeep
+!/testCode/logs/.gitkeep
 /audioRecordings/*
 !/audioRecordings/.gitkeep
+/logs/*
+!/logs/.gitkeep
