--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 
 /testCode/testLocalAudio/*
 !/testCode/testLocalAudio/.gitkeep
+/testCode/logs/*
 !/testCode/logs/.gitkeep
 
 /audioRecordings/*
